fixed spacing with login and signup button; temporarily made a warning for invalid user creation input

--- a/src/app/login.component/login.component.css
+++ b/src/app/login.component/login.component.css
@@ -47,6 +47,7 @@
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
+  margin-bottom: 10px;
 }
 .form button:hover,.form button:active {
   box-shadow: 3px 3px 3px 3px;
